--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>mysite</title>
+<title>gabriel-hancean</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -24,15 +24,15 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="mySite_files/libs/clipboard/clipboard.min.js"></script>
-<script src="mySite_files/libs/quarto-html/tabby.min.js"></script>
-<script src="mySite_files/libs/quarto-html/popper.min.js"></script>
-<script src="mySite_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="mySite_files/libs/quarto-html/anchor.min.js"></script>
-<link href="mySite_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="mySite_files/libs/quarto-html/light-border.css" rel="stylesheet">
-<link href="mySite_files/libs/quarto-html/quarto-html.min.css" rel="stylesheet" data-mode="light">
-<link href="mySite_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="gabriel-hancean_files/libs/clipboard/clipboard.min.js"></script>
+<script src="gabriel-hancean_files/libs/quarto-html/tabby.min.js"></script>
+<script src="gabriel-hancean_files/libs/quarto-html/popper.min.js"></script>
+<script src="gabriel-hancean_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="gabriel-hancean_files/libs/quarto-html/anchor.min.js"></script>
+<link href="gabriel-hancean_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="gabriel-hancean_files/libs/quarto-html/light-border.css" rel="stylesheet">
+<link href="gabriel-hancean_files/libs/quarto-html/quarto-html.min.css" rel="stylesheet" data-mode="light">
+<link href="gabriel-hancean_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 
 
 <link rel="stylesheet" href="styles.css">
@@ -50,7 +50,7 @@ ul.task-list li input[type="checkbox"] {
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Marian-Gabriel Hâncean - Quantitative Sociologist and Network Data Scientist at University of Bucharest. Expert in computational social sciences and network analysis.">
-<meta name="keywords" content="network analysis, computational sociology, social networks, data science, sociology, University of Bucharest">
+<meta name="keywords" content="network analysis, computational sociology, social networks, data science, sociology, social epidemics, University of Bucharest">
 <meta name="author" content="Marian-Gabriel Hâncean">
 
 <div class="progress-bar" id="progressBar"></div>
