Add new publication entries to index.html
Added multiple publication entries with details including titles, authors, journals, and links to full papers.

--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,75 @@ code, .monospace {
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
                                 <i class="fas fa-file-pdf"></i>
+                                <h4 class="anchored">Modeling temporal hypergraphs  </h4>
+                                <p>Journal of Complex Networks (2025)<br>Click to view full paper</p>
+                            </div>
+                            <div class="preview-overlay">
+                                <a href="https://doi.org/10.1093/comnet/cnaf054" target="_blank" class="preview-link">
+                                    <i class="fas fa-external-link-alt"></i> View Full Paper
+                                </a>
+                                <p class="preview-hint">Click anywhere to open full paper</p>
+                            </div>
+                        </div>
+                        <div class="publication-details">
+                            <h3 class="anchored">Modeling temporal hypergraphs</h3>
+                            <p class="journal"><em>Journal of Complex Networks</em> <strong>13</strong>, cnaf054 (2025)</p>
+                            <p class="authors">Lerner, J., <strong>Hâncean, M.-G.</strong>, Perc, M.</p>
+                            <div class="publication-actions">
+                                <a href="https://doi.org/10.1093/comnet/cnaf054" target="_blank" class="action-btn doi-btn">
+                                    <i class="fas fa-link"></i> DOI
+                                </a>
+                                <a href="https://raw.githubusercontent.com/mghancean/myProfile/main/papers/lerner_hancean_perc_2025.pdf" target="_blank" class="action-btn pdf-btn">
+                                    <i class="fas fa-file-pdf"></i> PDF
+                                </a>
+                                <a href="#" class="action-btn cite-btn" onclick="showCitation('Lerner, J., Hâncean, M.-G., &amp; Perc, M. (2025). Modeling temporal hypergraphs. Journal of Complex Networks, 13, cnaf054. https://doi.org/10.1093/comnet/cnaf054')">
+                                    <i class="fas fa-quote-right"></i> Cite
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Publication 2 -->
+                    <div class="publication-panel">
+                        <div class="publication-preview">
+                            <div class="pdf-placeholder">
+                                <i class="fas fa-file-pdf"></i>
+                                <h4 class="anchored">ReThinking Cancer Prevention</h4>
+                                <p>European Journal of Public Health (2025)<br>Click to view full paper</p>
+                            </div>
+                            <div class="preview-overlay">
+                                <a href="https://doi.org/10.1093/eurpub/ckaf161.784" target="_blank" class="preview-link">
+                                    <i class="fas fa-external-link-alt"></i> View Full Paper
+                                </a>
+                                <p class="preview-hint">Click anywhere to open full paper</p>
+                            </div>
+                        </div>
+                        <div class="publication-details">
+                            <h3 class="anchored">ReThinking Cancer Prevention Through Participation: from 4P-CAN Rural Living Lab in Eastern Europe</h3>
+                            <p class="journal"><em>European Journal of Public Health</em> 35 (2025)</p>
+                            <p class="authors">Geantă, M., Cioroboiu, C., Mihăilă, B.-E., &amp; <strong>Hâncean, M.-G.</strong> </p>
+                            <div class="publication-actions">
+                                <a href="https://doi.org/10.1093/eurpub/ckaf161.784" target="_blank" class="action-btn doi-btn">
+                                    <i class="fas fa-link"></i> DOI
+                                </a>
+                                <a href="https://raw.githubusercontent.com/mghancean/myProfile/main/papers/geanta_cioroboiu_mihaila_hancean_2025.pdf" target="_blank" class="action-btn pdf-btn">
+                                    <i class="fas fa-file-pdf"></i> PDF
+                                </a>
+                                <a href="#" class="action-btn cite-btn" onclick="showCitation('Geantă, M., Cioroboiu, C., Mihăilă, B.-E., &amp; Hâncean, M.-G. (2024). ReThinking Cancer Prevention Through Participation: from 4P-CAN Rural Living Lab in Eastern Europe. European Journal of Public Health, 35. https://doi.org/10.1093/eurpub/ckaf161.784')">
+                                    <i class="fas fa-quote-right"></i> Cite
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+              <!-- Row 2 -->
+                <div class="publication-row">
+                    <!-- Publication 3 -->
+                    <div class="publication-panel">
+                        <div class="publication-preview">
+                            <div class="pdf-placeholder">
+                                <i class="fas fa-file-pdf"></i>
                                 <h4 class="anchored">Processed Food Intake Assortativity</h4>
                                 <p>Scientific Reports (2025)<br>Click to view full paper</p>
                             </div>
@@ -1042,7 +1111,7 @@ code, .monospace {
                         </div>
                     </div>
 
-                    <!-- Publication 2 -->
+                    <!-- Publication 4 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
@@ -1076,9 +1145,9 @@ code, .monospace {
                     </div>
                 </div>
 
-                <!-- Row 2 -->
+                <!-- Row 3 -->
                 <div class="publication-row">
-                    <!-- Publication 3 -->
+                    <!-- Publication 5 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
@@ -1111,7 +1180,7 @@ code, .monospace {
                         </div>
                     </div>
 
-                    <!-- Publication 4 -->
+                    <!-- Publication 6 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
@@ -1145,9 +1214,9 @@ code, .monospace {
                     </div>
                 </div>
 
-                <!-- Row 3 -->
+                <!-- Row 4 -->
                 <div class="publication-row">
-                    <!-- Publication 5 -->
+                    <!-- Publication 7 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
@@ -1180,7 +1249,7 @@ code, .monospace {
                         </div>
                     </div>
 
-                    <!-- Publication 6 -->
+                    <!-- Publication 8 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
@@ -1214,9 +1283,9 @@ code, .monospace {
                     </div>
                 </div>
 
-                <!-- Row 4 -->
+                <!-- Row 5 -->
                 <div class="publication-row">
-                    <!-- Publication 7 -->
+                    <!-- Publication 9 -->
                     <div class="publication-panel">
                         <div class="publication-preview">
                             <div class="pdf-placeholder">
